dnl Process this file with autoconf to produce a configure script.
AC_INIT
dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PATH_PROG(PERL, perl, noperl)

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_SYS_WAIT

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile man/Makefile)
